fix `hr` spacing

--- a/src/Creatures/Create.module.scss
+++ b/src/Creatures/Create.module.scss
@@ -12,7 +12,7 @@
   }
   & hr {
     grid-column: 1 / -1;
-    margin-bottom: 20px;
+    margin: 0 0 20px;
     width: 100%;
   }
   & > input {
